--- a/ReversationApp/src/components/header/header.css
+++ b/ReversationApp/src/components/header/header.css
@@ -13,6 +13,10 @@
   margin: 20px 0px 100px 0px;
 }
 
+.headerContainer.listMode {
+  margin: 20px 0px 0px 0px;
+}
+
 .headerList {
   display: flex;
   gap: 40px;
@@ -83,4 +87,45 @@
 .date {
   position: absolute;
   top: 50px;
+  z-index: 2;
+}
+
+.options {
+  position: absolute;
+  top: 50px;
+  background-color: #fff;
+  color: gray;
+  border-radius: 5px;
+  z-index: 2;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
+    rgba(0, 0, 0, 0.22) 0px 10px 10px;
+}
+
+.optionItem {
+  width: 200px;
+  display: flex;
+  justify-content: space-between;
+  margin: 10px;
+}
+
+.optionCounter {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font-size: 12px;
+  color: #000;
+}
+
+.optionCounterButton {
+  width: 30px;
+  height: 30px;
+  border: 1px solid #0071c2;
+  color: #0071c2;
+  background-color: #fff;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+.optionCounterButton:disabled {
+  cursor: not-allowed;
 }
