--- a/ReversationApp/src/components/featured/featured.css
+++ b/ReversationApp/src/components/featured/featured.css
@@ -20,8 +20,8 @@
   object-fit: cover;
 }
 
-featuredTitles {
+.featuredTitles {
   position: absolute;
-  bottom: 20;
-  left: 20;
+  bottom: 20px;
+  left: 20px;
 }
